--- a/ui/html/base.gohtml
+++ b/ui/html/base.gohtml
@@ -3,6 +3,7 @@
 <!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
+    Pending
     <meta charset="UTF-8">
     <title>{{template  "title" . }}</title> <!-- { {template "title"} } actions denoate that we want to invoke other named template called title-->
     {{/*now that we have our static file server, we can use it */}}
